--- a/card57.html
+++ b/card57.html
@@ -29,7 +29,7 @@
     
     <!-- Fan Card -->
     <div id="details-card" class="relative bg-neutral-900 text-yellow-400 p-6 rounded-xl shadow-lg w-80 text-center border border-yellow-400">
-      <img src="./assets/fan_profile1.jpg" alt="Fan Profile Image" class="w-20 h-20 mx-auto rounded-full object-cover mb-3">
+      <img src="./d644fad2-cf4e-4881-a445-f45479e16df9.jpeg" alt="Fan Profile Image" class="w-20 h-20 mx-auto rounded-full object-cover mb-3">
       <h3 class="text-xl font-semibold">Heidi bush</h3>
       <p class="text-sm">Heidibush_93@yahoo </p>
       <p class="text-sm">3600 Moody rd Lowville ny 13367</p>
@@ -38,7 +38,7 @@
 
     <!-- Celebrity Card -->
     <div id="celebrity-card" class="relative bg-neutral-900 text-yellow-400 p-6 rounded-xl shadow-lg w-80 text-center border border-yellow-400">
-      <img src="./assets/celebrity_profile.jpg" alt="Celebrity Profile Image" class="w-20 h-20 mx-auto rounded-full object-cover mb-3">
+      <img src="./d4972c59-e3f7-4717-8895-3580a789fba5.jpeg" alt="Celebrity Profile Image" class="w-20 h-20 mx-auto rounded-full object-cover mb-3">
       <h2 class="text-2xl font-bold">Blake Theman</h2>
       <h2 class="text-xl font-medium">VIP Card</h2>
       <div id="vip-badge" class="absolute top-3 right-3 bg-yellow-400 text-black text-xs font-bold px-3 py-1 rounded">
